tests/trybuild/compile_fail/with_settings/bump_scope/borrow/guaranteed_allocated_increase.stderr
error[E0080]: evaluation panicked: can't increase guaranteed-allocated property using `Bump(Scope)::borrow_with_settings`
 --> src/raw_bump.rs
  |
  | /             assert!(
  | |                 NewS::GUARANTEED_ALLOCATED <= S::GUARANTEED_ALLOCATED,
  | |                 "can't increase guaranteed-allocated property using `Bump(Scope)::borrow_with_settings`"
  | |             );
  | |_____________^ evaluation of `bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, bump_scope::settings::BumpSettings<1, true, false>>::ensure_satisfies_settings_for_borrow::<bump_scope::settings::BumpSettings>::{constant#0}` failed here

note: erroneous constant encountered
 --> src/raw_bump.rs
  |
  | /         const {
  | |             assert!(NewS::UP == S::UP, "can't change `UP` setting of `Bump(Scope)`");
  | |
  | |             assert!(
... |
  | |             );
  | |         }
  | |_________^

note: the above error was encountered while instantiating `fn bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, BumpSettings<1, true, false>>::ensure_satisfies_settings_for_borrow::<BumpSettings>`
 --> src/bump_scope.rs
  |
  |         self.raw.ensure_satisfies_settings_for_borrow::<NewS>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
